--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "uuid": "^8.3.2",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "ngx-mask": "^12.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.4",
